Tried to fix "page too wide" issues

--- a/src/main/resources/css/maven-base.css
+++ b/src/main/resources/css/maven-base.css
@@ -166,3 +166,6 @@ div.clear hr{
   border: 0px;
   margin: 0px;
 }
+#contentBox {
+  overflow: auto;
+}
